--- a/src/components/chatcomponent/chat.module.css
+++ b/src/components/chatcomponent/chat.module.css
@@ -84,7 +84,7 @@
   width: 100%;
   align-items: center;
   display: flex;
-  gap: 8px;
+  gap: 4px;
   justify-content: flex-end;
 }
 .chatImageWrapper {
@@ -115,7 +115,7 @@
 .chatUserDetails {
   font-size: 15px;
   display: flex;
-  gap: 12px;
+  gap: 8px;
   align-items: center;
   padding: 16px;
   border-bottom: 1px solid #414141;
@@ -123,8 +123,8 @@
 .chatUserDetails .backBtn {
   display: none;
   flex-shrink: 0;
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 2rem;
+  width: 2rem;
   fill: white;
 }
 .chatUserDetails img {
@@ -231,8 +231,8 @@
     padding: 8px;
   }
   .chatUserDetails .backBtn {
-    display: block;
     margin-right: 8px;
+    display: block;
     cursor: pointer;
   }
 }
@@ -258,5 +258,14 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 420px) {
+  .chatTime {
+    margin-top: 5px;
+  }
+  .chatTime svg {
+    margin-top: -2px;
   }
 }
