--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 6px;
+  overflow: hidden;
   display: flex;
 }
 .userContainer {
