--- a/src/components/usercomponent/user.module.css
+++ b/src/components/usercomponent/user.module.css
@@ -56,7 +56,7 @@
   text-wrap: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 1.05rem;
+  font-size: 1.1rem;
   text-transform: capitalize;
   margin-right: 5px;
 }
@@ -69,12 +69,15 @@
   text-wrap: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 12.5px;
+  font-size: 13px;
   margin-right: 3px;
+  align-items: center;
   display: flex;
   gap: 4px;
-  align-items: center;
-  color: var(--textSoft);
+  color: #c9c7c7 !important;
+}
+.lastMsg svg {
+  margin-top: -2px;
 }
 .lastTime {
   color: var(--textSoft);
