Updated some UI

--- a/src/components/usercomponent/user.module.css
+++ b/src/components/usercomponent/user.module.css
@@ -46,11 +46,8 @@
   gap: 16px;
   align-items: center;
   padding: 16px;
-  border-bottom: 1px solid #414141;
+  border-top: 1px solid #414141;
   cursor: pointer;
-}
-.eachUser:last-child {
-  border-bottom: none;
 }
 .eachUser .username {
   text-wrap: nowrap;
