--- a/src/components/usercomponent/user.module.css
+++ b/src/components/usercomponent/user.module.css
@@ -27,7 +27,7 @@
   border: none;
   outline: none;
   width: 100%;
-  padding: 8px 12px 12px 12px;
+  padding: 16px;
   line-height: 0px;
   border-radius: 8px;
   background-color: rgba(0, 0, 0, 0.6);
